# ElevateKit

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/core/: mod.rs  privilege.rs  process.rs  token.rs
src/core/elevation/: mod.rs  trusted_installer.rs
src/core/services/: mod.rs  privilege_service.rs  trusted_installer.rs
src/domain/: constants.rs  mod.rs  models.rs
src/infrastructure/: error.rs  mod.rs
src/infrastructure/windows/: service.rs
src/interface/: cli.rs  mod.rs  ui.rs
src/utils/: config.rs  error.rs  logging.rs  mod.rs  security.rs
