[package]
name = "elevatekit"
version = "0.1.0"
edition = "2021"
description = "Advanced Windows privilege elevation toolkit"
authors = ["Indrit Zeqiri <indrit.zeqiri@gmail.com>"]

[dependencies]
winapi = { version = "0.3", features = [
    "processthreadsapi", 
    "securitybaseapi", 
    "handleapi", 
    "errhandlingapi",
    "winsvc",
    "winbase",
    "winnt",
    "synchapi",
    "winerror",
    "sddl",
    "heapapi"
]}
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.4", features = ["derive"] }
dirs = "5.0"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
colored = "2.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
